# PP_labs

./: README.md
lab1/: CMakeLists.txt  main.cpp  matrix_a.txt  matrix_b.txt  matrix_c.txt  matrix_generator.py  verify.py  Результаты.xlsx
